--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Montserrat&family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="desktop.css" media="screen and (min-width: 992px)">
 </head>
 
 <body>
+    <div class="navbar">
+        <div class="nav-logo col-2">
+            <img src="images/logo.png" height="150px" width="150px" alt="">
+        </div>
+
+        <div class="nav-heading col-4">
+            <h1>Muktadir Rahman</h1>
+        </div>
+
+        <div class="nav-menu col-6">
+            <a href="# ">Home</a>
+            <a href="# ">Skills</a>
+            <a href="# ">Contact me</a>
+            <a href="# ">About me</a>
+
+        </div>
+    </div>
+
+
 
 </body>
 
