profile section done

--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
             <a href="# ">Skills</a>
             <a href="# ">Contact me</a>
             <a href="# ">About me</a>
-
         </div>
     </div>
 
+    <div class="profile">
+        <img class="top-weather-icon" src="images/icon.png" height="150px" width="150px" alt="">
+
+        <div class="profile-desc">
+            <h1>I am a Computer Engineer <br>& <br> Web Developer</h1>
+            <p>Hello! This is Muktadir Rahman. Welcome to my personal page that I’ve designed to showcase my skills and expertise that I’ve accumulated over the year</p>
+        </div>
+        <img class="bottom-weather-icon" src="images/icon.png" height="150px" width="150px" alt="">
+    </div>
 
 
 </body>
