about me section done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,37 @@
         <img class="bottom-weather-icon" src="images/icon.png" height="150px" width="150px" alt="">
     </div>
 
+    <!-- About me section start-->
+    <div class="about-me">
+        <h2>ABOUT ME</h2>
+        <hr class="dotted-hr">
+
+        <div class="aboutme-img col-6">
+            <img src="images/sabil.jpg" height="300px" width="300px" alt="">
+        </div>
+
+        <div class="aboutme-desc col-6">
+            <p>I like to call myself “a passionate computer science student & Web developer”. </p>
+            <p>I am dedicated to cultivating a career as a full-stack web developer, currently advancing my education. With determination and faith, in sha Allah, I am confident in achieving my aspirations in this field.</p>
+
+            <hr class="aboutme-hr">
+            <p>Name: Muktadir Rahman</p>
+            <hr class="aboutme-hr">
+            <p>Address: Mirpur-10, Dhaka</p>
+            <hr class="aboutme-hr">
+            <p>Email: <a href="mailto:muktadir1280@gmail.com">muktadir1280@gmail.com</a> </p>
+            <hr class="aboutme-hr">
+            <p>Phone: <a href="tel:+8801755345843">+8801755345843</a> </p>
+            <hr class="aboutme-hr">
+            <p>Website: <a href="https://muktadirportfolio.dorik.io/" target="blank">muktadirportfolio.dorik.io</a> </p>
+            <hr class="aboutme-hr">
+            <p>
+                <a href="https://drive.google.com/drive/folders/10N1mWZyhc4mjRggrLASqt_CNo28hSGxp" target="_blank" download=""> <button class="cv-button">DOWNLOAD CV</button></a>
+            </p>
+        </div>
+    </div>
+    <!-- About me section ends-->
+
 
 </body>
 
