progress bar done

--- a/index.html
+++ b/index.html
@@ -71,6 +71,83 @@
     </div>
     <!-- About me section ends-->
 
+    <!-- professional experience starts -->
+    <div class="professional-experience">
+        <div class="work col-4">
+            <div class="card">
+                <div class="card-icon">
+                    <img src="images/work.png" alt="">
+                </div>
+                <div class="card-title">
+                    <h2>WORK EXPERIENCE</h2>
+                </div>
+                <div class="card-desc">
+                    <ol>
+                        <li>
+                            <strong>Frontend Web Developer</strong> <br> November 26- December 26 <br> 744/1 Shewrapara, Mirpur, Dhaka
+                        </li>
+                    </ol>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="education col-4">
+            <div class="card">
+                <div class="card-icon">
+                    <img src="images/book.png" alt="">
+                </div>
+                <div class="card-title">
+                    <h2>EDUCATION</h2>
+                </div>
+                <div class="card-desc">
+                    <ol>
+                        <li>
+                            <strong>B.Sc. in Software Development</strong> <br> 2020-2024 <br> Green University of Bangladesh<br> Dhaka, Bangladesh<br>
+                        </li>
+                        <hr>
+                        <li>
+                            <strong>Higher Secondary Certificate Examination</strong> <br> 2017- 2019 <br> Rajshahi Govt. Model School and Collage <br> Rajshahi, Bangladesh<br>
+                        </li>
+                        <hr>
+                        <li>
+                            <strong>Secondary School Certificate Examination /strong> <br>
+                            2015- 2017<br>
+                            T M Memorial Academy  <br>
+                            Bogura Bangladesh<br>
+                         </li>
+                    </ol>
+                </div>
+            </div>
+
+        </div>
+        <div class="skills col-4">
+            <div class="card">
+                <div class="card-icon">
+                    <img src="images/skill.png" height="90px" width="90px" alt="">
+                </div>
+                <div class="card-title">
+                    <h2>SKILLS</h2>
+                </div>
+                <div class="card-desc">
+                    <ul>
+                        <li class="html">HTML</li>
+                        <li class="css">CSS</li>
+                        <li class="bootstrap">BOOTSTRAP</li>
+                        <li class="javascript">JAVASCRIPT</li>
+                    </ul>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- professional experience ends -->
+
+
+
+
+
 
 </body>
 
