achivement first part done

--- a/index.html
+++ b/index.html
@@ -144,8 +144,24 @@
     </div>
     <!-- professional experience ends -->
 
+<!-- achievement content starts here -->
 
+<div class="achivement-contact">
+<div class="achivement col-4">
+<h2>ACHIEVEMENTS</h2>
+<hr class="dotted-hr">
+<p>1. 50% Tuition Waiver: Based on excellent academic result in Green University of Bangladesh</p>
+<p>2. Talentpull scholership in Junior School Certificate</p>
+<p>3. General Schoolership in Primary School Certificate</p>
+</div>
+<div class="contact col-4">
 
+</div>
+<div class="contack-link col-4">
+
+</div>
+</div>
+<!-- achievement content ends here -->
 
 
 
