contact me section done

--- a/index.html
+++ b/index.html
@@ -155,9 +155,19 @@
 <p>3. General Schoolership in Primary School Certificate</p>
 </div>
 <div class="contact col-4">
+<h2>Contact ME</h2>
+<hr class="dotted-hr">
+<form action="mailto:muktdir1280@gmail.com" method="post" enctype="text/plain">
+<p><input type="text" placeholder="Your Name"></p>
+<p><input type="email" placeholder="Your Email"></p>
+<p><textarea name="message" id="" cols="30" rows="10" placeholder="Your Message Here"></textarea></p>
+<button type="submit">Send</button>
+<button type="reset">Reset</button>
+</form>
 
 </div>
-<div class="contack-link col-4">
+
+<div class="contact-link col-4">
 
 </div>
 </div>
