achievement section done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Project</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Montserrat&family=Satisfy&display=swap" rel="stylesheet">
@@ -164,11 +165,18 @@
 <button type="submit">Send</button>
 <button type="reset">Reset</button>
 </form>
-
 </div>
-
-<div class="contact-link col-4">
-
+<div class="contact-links col-4">
+    <h2>More Ways to Contact</h2>
+<hr class="dotted-hr">
+<div class="media-buttons">
+    <button class="btn" onclick="window.open('https://www.youtube.com/?reload=9&app')" class="request-callback"><i class="fa fa-youtube-play" aria-hidden="true" style="color: #c4302b;"></i></button>
+    <button class="btn"><i class="fa fa-facebook" aria-hidden="true" style="color: 	#4267B2;"></i></button>
+    <button class="btn"><i class="fa fa-linkedin-square" aria-hidden="true" style="color: #0077b5;"></i></button>
+    <button class="btn"><i class="fa fa-skype" aria-hidden="true" style="color: 	#00AFF0;"></i></button>
+    <button class="btn"><i class="fa fa-github" aria-hidden="true" style="color: #171515;"></i></button>
+    <button class="btn"><i class="fa fa-telegram" aria-hidden="true" style="color: #0088cc;"></i></button>
+</div>
 </div>
 </div>
 <!-- achievement content ends here -->
