--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         </div>
 
         <div class="nav-menu col-6">
-            <a href="# ">Home</a>
-            <a href="# ">Skills</a>
-            <a href="# ">Contact me</a>
-            <a href="# ">About me</a>
+            <a href="#Home">Home</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact me</a>
+            <a href="#about">About me</a>
         </div>
     </div>
 
     <div class="profile">
         <img class="top-weather-icon" src="images/icon.png" height="150px" width="150px" alt="">
 
-        <div class="profile-desc">
+        <div class="profile-desc" id="home">
             <h1>I am a Computer Engineer <br>& <br> Web Developer</h1>
             <p>Hello! This is Muktadir Rahman. Welcome to my personal page that I’ve designed to showcase my skills and expertise that I’ve accumulated over the year</p>
         </div>
@@ -42,7 +42,7 @@
     </div>
 
     <!-- About me section start-->
-    <div class="about-me">
+    <div class="about-me" id="about">
         <h2>ABOUT ME</h2>
         <hr class="dotted-hr">
 
@@ -122,7 +122,7 @@
             </div>
 
         </div>
-        <div class="skills col-4">
+        <div class="skills col-4" id="skills">
             <div class="card">
                 <div class="card-icon">
                     <img src="images/skill.png" height="90px" width="90px" alt="">
@@ -155,7 +155,7 @@
 <p>2. Talentpull scholership in Junior School Certificate</p>
 <p>3. General Schoolership in Primary School Certificate</p>
 </div>
-<div class="contact col-4">
+<div class="contact col-4" id="contact">
 <h2>Contact ME</h2>
 <hr class="dotted-hr">
 <form action="mailto:muktdir1280@gmail.com" method="post" enctype="text/plain">
@@ -181,6 +181,19 @@
 </div>
 <!-- achievement content ends here -->
 
+<!-- footer section starts here -->
+<div class="footer">
+    <div class="footer-menu col-6">
+            <a href="#Home">Home</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact me</a>
+            <a href="#about">About me</a>
+    </div>
+    <div class="footer-desc col-6">
+<p><i class="fa fa-copyright" aria-hidden="true" style="color: white;"></i>  All rights reserved by Muktadir Rahman, 2024.</p>
+    </div>
+
+</div>
 
 
 </body>
